[package]
name = "bin_crate"
version = "0.1.0"
edition = "2021"
description = "A binary crate, used to test receiving command line arguments."
license = "MIT"
repository = "https://github.com/862826044/bin_crate"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
